--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activityDetailScreen"></activity>
         <activity android:name=".activityScreen"></activity>
         <activity android:name=".signupScreen"></activity>
+        <activity android:name=".profileScreen"></activity>
         <activity
             android:name=".postScreen"
             android:label="@string/app_name" >
@@ -37,6 +38,9 @@
         </activity>
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDoquG-L4J6KTmnWhzLY7NAe-1jGJxPSrA"/>
     </application>
 
     <uses-feature
@@ -46,4 +50,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 </manifest>
