--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/activity_detail_button"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="Welcome to Yue!" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -17,19 +17,36 @@
         </activity>
         <activity
             android:name=".listViewScreen"
-            android:parentActivityName=".MainActivity">
+            android:label="view Posts"
+            android:parentActivityName=".activityScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>>
         </activity>
-        <activity android:name=".mapViewScreen"></activity>
-        <activity android:name=".activityDetailScreen"></activity>
-        <activity android:name=".activityScreen"></activity>
-        <activity android:name=".signupScreen"></activity>
-        <activity android:name=".profileScreen"></activity>
+        <activity
+            android:name=".mapViewScreen"
+            android:label="Map"
+            android:parentActivityName=".activityScreen"></activity>
+        <activity
+            android:name=".activityDetailScreen"
+            android:label="Details"
+            android:parentActivityName=".activityScreen"></activity>
+        <activity
+            android:name=".activityScreen"
+            android:label="Homepage"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".signupScreen"
+            android:label="Sign Up"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".profileScreen"
+            android:label="Profile"
+            android:parentActivityName=".activityDetailScreen">
+        </activity>
         <activity
             android:name=".postScreen"
-            android:label="@string/app_name" >
+            android:label="Post My Plan"
+            android:parentActivityName=".activityScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
