--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/activity_detail_button"
+        android:icon="@drawable/icon_launch"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
